# polars-inspector

./: Makefile  hello.py  pyproject.toml  result.csv  target.csv
.github/workflows/: ci.yaml
.vscdoe/: extentions.json  settings.json
src/: main.py
src/domain/: aggregations.py  dataframe.py  models.py  services.py
src/infrastructure/: csv.py  file_reader.py
src/port/: csv.py
src/usecase/: csv_format_and_ordered_by_date.py  precess_data.py
tests/domain/: test_services.py
tests/usecase/: csv_format_and_ordered_by_date_test.py  process_data_test.py
